Fixed some of the scrollbar monbo jumbo

--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,6 @@ html {
 
     height: 100%;
     scroll-behavior: smooth;
-    overflow: visible;
-
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
 }
 
 body {
@@ -33,7 +28,8 @@ body {
 
     height: 100%;
 
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #master {
