--- a/css/overlay.css
+++ b/css/overlay.css
@@ -6,11 +6,8 @@
 
     top: 0;
     bottom:0;
-    overflow: scroll;
-
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
     transition: width 0.7s;
 }
